Fixed BAP-1767: IE 9 menu invisibility

--- a/Bundle/UIBundle/Resources/public/css/ie.css
+++ b/Bundle/UIBundle/Resources/public/css/ie.css
@@ -15,6 +15,9 @@ header .dropdown-menu li > a{
 .navbar-inner{
     filter: none;
 }
+#oroplatform-header>.navbar-inner {
+    filter: none;
+}
 .btn-group{
     display: inline;
 }
